# tap-google-business

./: README.md  meltano.yml  pyproject.toml  tox.ini
schemas/: daily_metrics_time_series.json  locations.json  multi_daily_metrics_time_series.json  search_keywords_impressions_monthly.json
tap_google_business/: __init__.py  __main__.py  auth.py  client.py  streams.py  tap.py
tests/: __init__.py  test_base_credentials.py  test_core.py  test_proxy_oauth.py  utils.py
